# PPOCR-Inference-Service

./: .gitignore  CMakeLists.txt  README.md  dependencies.txt  includes.txt  install_includes.bat
.devcontainer/: devcontainer.json
protos/: CMakeLists.txt  ppocr_service.proto
src/: main.cc
src/hpp/: inference_manager.hpp  inference_models.hpp  inference_models_manager.hpp  inference_pipeline.hpp  inference_pipeline_builder.hpp  ppocr_infer.hpp  settings.hpp  settings_manager.hpp  util.hpp
src/service_grpc/: CMakeLists.txt  grpc_helpers.hpp  service_grpc.cc
src/service_http/: CMakeLists.txt  service_http.cc
